src/objects/Image__c.object
<CustomObject>
    <fields>
        <fullName>Carousel_Class__c</fullName>
        <label>Carousel Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Content_Container__c</referenceTo>
        <relationshipLabel>Images</relationshipLabel>
        <relationshipName>Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ Location__c , alt__c, 100, 296)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Background Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carousel Image</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>alt__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Image</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Carousel_Class__c</columns>
        <columns>alt__c</columns>
        <columns>Location__c</columns>
        <columns>Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Carousel</fullName>
        <columns>NAME</columns>
        <columns>Carousel_Class__c</columns>
        <columns>alt__c</columns>
        <columns>Location__c</columns>
        <columns>Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Carousel Image</value>
        </filters>
        <label>Carousel Images</label>
    </listViews>
    <listViews>
        <fullName>background</fullName>
        <columns>NAME</columns>
        <columns>Carousel_Class__c</columns>
        <columns>alt__c</columns>
        <columns>Location__c</columns>
        <columns>Image__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Background Image</value>
        </filters>
        <label>Background Images</label>
    </listViews>
    <nameField>
        <label>Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>